--- a/example/package.json
+++ b/example/package.json
@@ -12,8 +12,9 @@
   },
   "alias": {
     "react": "../node_modules/react",
-    "react-dom": "../node_modules/react-dom/profiling",
-    "scheduler/tracing": "../node_modules/scheduler/tracing-profiling"
+    "react-dom": "../node_modules/react-dom",
+    "scheduler/tracing": "../node_modules/scheduler/tracing-profiling",
+    "react-timeline": "../dist"
   },
   "devDependencies": {
     "@types/react": "^16.9.11",
