--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "@storybook/react": "^6.1.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/uuid": "^8.3.0",
     "babel-loader": "^8.2.1",
+    "date-fns": "^2.16.1",
     "husky": "^4.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -66,6 +68,9 @@
     "size-limit": "^4.9.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.0.3",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "use-resize-observer": "^7.0.0",
+    "uuid": "^8.3.1",
+    "schedule-fns": "../schedule-fns/lib"
   }
 }
