--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -12,11 +12,22 @@
     "strictNullChecks": true,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "lib": ["es2015", "es2016", "dom"],
-    "types": ["node"],
+    "lib": [
+      "es2015",
+      "es2016",
+      "dom"
+    ],
+    "types": [
+      "node"
+    ],
     "baseUrl": ".",
     "paths": {
-      "react-timeline": ["../dist/"]
+      "react-timeline": [
+        "../dist/"
+      ],
+      "react-timeline/*": [
+        "../dist/*"
+      ]
     }
   }
 }
