--- a/package.json
+++ b/package.json
@@ -59,18 +59,24 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/uuid": "^8.3.0",
+    "autoprefixer": "^10.0.4",
     "babel-loader": "^8.2.1",
+    "cssnano": "^4.1.10",
     "date-fns": "^2.16.1",
     "husky": "^4.3.0",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-is": "^17.0.1",
+    "react-spring": "^9.0.0-rc.3",
+    "react-use-gesture": "^8.0.1",
+    "rollup-plugin-scss": "^2.6.1",
+    "schedule-fns": "../schedule-fns/lib",
     "size-limit": "^4.9.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.0.3",
     "typescript": "^4.1.2",
     "use-resize-observer": "^7.0.0",
-    "uuid": "^8.3.1",
-    "schedule-fns": "../schedule-fns/lib"
+    "uuid": "^8.3.1"
   }
 }
