--- a/example/package.json
+++ b/example/package.json
@@ -13,6 +13,7 @@
   "alias": {
     "react": "../node_modules/react",
     "react-dom": "../node_modules/react-dom",
+    "date-fns": "../node_modules/date-fns",
     "scheduler/tracing": "../node_modules/scheduler/tracing-profiling",
     "react-timeline": "../dist",
     "react-timeline/budle.css": "../dist/bundle.css"
