--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-loader": "^8.2.1",
     "cssnano": "^4.1.10",
     "date-fns": "^2.16.1",
+    "date-fns-tz": "^1.0.12",
     "husky": "^4.3.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
