--- a/example/package.json
+++ b/example/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "parcel index.html",
+    "start": "parcel index.html --host 0.0.0.0",
     "build": "parcel build index.html"
   },
   "dependencies": {
