--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.12.8",
+    "@reduxjs/toolkit": "^1.5.0",
     "@size-limit/preset-small-lib": "^4.9.0",
     "@storybook/addon-essentials": "^6.1.4",
     "@storybook/addon-info": "^5.3.21",
@@ -53,6 +54,7 @@
     "@storybook/react": "^6.1.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.15",
     "@types/uuid": "^8.3.0",
     "autoprefixer": "^10.0.4",
     "babel-loader": "^8.2.1",
@@ -65,6 +67,8 @@
     "react-dom": "^17.0.1",
     "react-is": "^17.0.1",
     "react-spring": "^9.0.0-rc.3",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "react-use-gesture": "^8.0.1",
     "rollup-plugin-scss": "^2.6.1",
     "schedule-fns": "../schedule-fns",
