--- a/example/package.json
+++ b/example/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html",
+    "start-prod": "cross-env NODE_ENV=production parcel index.html --host 0.0.0.0",
     "build": "parcel build index.html"
   },
   "dependencies": {
