--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-is": "^17.0.1",
     "react-spring": "^9.0.0-rc.3",
     "react-redux": "^7.2.2",
+    "react-reparenting": "^0.5.0",
     "redux": "^4.0.5",
     "react-use-gesture": "^8.0.1",
     "reselect": "^4.0.0",
