--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.15",
     "@types/uuid": "^8.3.0",
+    "@types/body-scroll-lock": "^2.6.1",
     "autoprefixer": "^10.0.4",
     "babel-loader": "^8.2.1",
     "cssnano": "^4.1.10",
@@ -80,5 +81,8 @@
     "typescript": "^4.1.2",
     "use-resize-observer": "^7.0.0",
     "uuid": "^8.3.1"
+  },
+  "dependencies": {
+    "body-scroll-lock": "^3.1.5"
   }
 }
