--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "uuid": "^8.3.1"
   },
   "dependencies": {
+    "@types/resize-observer-browser": "^0.1.5",
     "body-scroll-lock": "^3.1.5"
   }
 }
