--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "react-is": "^17.0.1",
     "react-spring": "^9.0.0-rc.3",
     "react-redux": "^7.2.2",
-    "react-reparenting": "^0.5.0",
     "redux": "^4.0.5",
     "react-use-gesture": "^8.0.1",
     "reselect": "^4.0.0",
@@ -79,11 +78,11 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.0.3",
     "typescript": "^4.1.2",
-    "use-resize-observer": "^7.0.0",
     "uuid": "^8.3.1"
   },
   "dependencies": {
     "@types/resize-observer-browser": "^0.1.5",
-    "body-scroll-lock": "^3.1.5"
+    "body-scroll-lock": "^3.1.5",
+    "react-fast-compare": "^3.2.0"
   }
 }
