--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "@storybook/addon-links": "^6.1.4",
     "@storybook/addons": "^6.1.4",
     "@storybook/react": "^6.1.4",
+    "@types/body-scroll-lock": "^2.6.1",
     "@types/react": "^17.0.0",
+    "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.15",
+    "@types/resize-observer-browser": "^0.1.5",
     "@types/uuid": "^8.3.0",
-    "@types/body-scroll-lock": "^2.6.1",
     "autoprefixer": "^10.0.4",
     "babel-loader": "^8.2.1",
     "cssnano": "^4.1.10",
@@ -67,11 +69,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-is": "^17.0.1",
-    "react-spring": "^9.0.0-rc.3",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
+    "react-spring": "^9.0.0-rc.3",
     "react-use-gesture": "^8.0.1",
+    "redux": "^4.0.5",
     "reselect": "^4.0.0",
+    "reselect-tools": "0.0.7",
     "rollup-plugin-scss": "^2.6.1",
     "schedule-fns": "../schedule-fns",
     "size-limit": "^4.9.0",
@@ -81,8 +84,8 @@
     "uuid": "^8.3.1"
   },
   "dependencies": {
-    "@types/resize-observer-browser": "^0.1.5",
     "body-scroll-lock": "^3.1.5",
+    "react-custom-scrollbars": "^4.2.1",
     "react-fast-compare": "^3.2.0"
   }
 }
