--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build-storybook": "build-storybook"
   },
   "peerDependencies": {
-    "react": ">=16"
+    "react": "16.8"
   },
   "prettier": {
     "printWidth": 80,
@@ -52,9 +52,9 @@
     "@storybook/addons": "^6.1.4",
     "@storybook/react": "^6.1.4",
     "@types/body-scroll-lock": "^2.6.1",
-    "@types/react": "^17.0.0",
+    "@types/react": "^16.8.6",
     "@types/react-custom-scrollbars": "^4.0.7",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "^16.8.6",
     "@types/react-redux": "^7.1.15",
     "@types/resize-observer-browser": "^0.1.5",
     "@types/uuid": "^8.3.0",
@@ -63,7 +63,7 @@
     "cssnano": "^4.1.10",
     "husky": "^4.3.0",
     "node-sass": "^5.0.0",
-    "react-is": "^17.0.1",
+    "react-is": "^16.13.1",
     "rollup-plugin-scss": "^2.6.1",
     "size-limit": "^4.9.0",
     "tsdx": "^0.14.1",
@@ -74,12 +74,12 @@
     "@reduxjs/toolkit": "^1.5.0",
     "date-fns": "^2.16.1",
     "date-fns-tz": "^1.0.12",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-fast-compare": "^3.2.0",
     "react-redux": "^7.2.2",
     "react-spring": "^9.0.0-rc.3",
     "react-use-gesture": "^8.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "redux": "^4.0.5",
     "reselect": "^4.0.0",
     "schedule-fns": "git+https://github.com/adrianschneider94/schedule-fns.git#fbcc4d94917144740fd0e92f99181965d38da228"
