--- a/example/package.json
+++ b/example/package.json
@@ -17,11 +17,12 @@
     "date-fns": "../node_modules/date-fns",
     "scheduler/tracing": "../node_modules/scheduler/tracing-profiling",
     "react-timeline": "../dist",
-    "react-timeline/budle.css": "../dist/bundle.css"
+    "react-timeline/budle.css": "../dist/bundle.css",
+    "immer": "../node_modules/immer"
   },
   "devDependencies": {
-    "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.8.4",
+    "@types/react": "^17",
+    "@types/react-dom": "^17",
     "parcel": "^1.12.3",
     "typescript": "^3.4.5"
   }
