--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "postinstall": "patch-package"
   },
   "peerDependencies": {
-    "react": "^17.0.1 || ^16.8.6",
-    "react-dom": "^17.0.1 || ^16.8.6",
+    "react": "^16.8.6 || ^17.0.1",
+    "react-dom": "^16.8.6 || ^17.0.1",
     "redux": "^4.0.5"
   },
   "prettier": {
@@ -66,8 +66,8 @@
     "cssnano": "^4.1.10",
     "husky": "^4.3.0",
     "node-sass": "^5.0.0",
-    "react": "^17",
-    "react-dom": "^17",
+    "react": ">= 16.8.0",
+    "react-dom": ">= 16.8.0",
     "react-is": "^16.13.1",
     "redux": "^4.0.5",
     "rollup-plugin-scss": "^2.6.1",
@@ -77,14 +77,14 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "@react-spring/web": "^9.0.0-rc.3",
     "@reduxjs/toolkit": "^1.5.0",
     "date-fns": "^2.16.1",
     "date-fns-tz": "^1.0.12",
     "react-fast-compare": "^3.2.0",
     "react-redux": "^7.2.2",
-    "react-spring": "^9.0.0-rc.3",
     "react-use-gesture": "^8.0.1",
     "reselect": "^4.0.0",
-    "schedule-fns": "git+https://github.com/adrianschneider94/schedule-fns.git#fbcc4d94917144740fd0e92f99181965d38da228"
+    "schedule-fns": "github:adrianschneider94/schedule-fns#fbcc4d94"
   }
 }
