--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "babel-loader": "^8.2.1",
     "cssnano": "^4.1.10",
     "husky": "^4.3.0",
-    "node-sass": "^5.0.0",
     "react": ">= 16.8.0",
     "react-dom": ">= 16.8.0",
     "react-is": "^16.13.1",
@@ -77,7 +76,8 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "@react-spring/web": "^9.0.0-rc.3",
+    "@react-spring/types": "^9.2.3",
+    "@react-spring/web": "^9.2.3",
     "@reduxjs/toolkit": "^1.5.0",
     "date-fns": "^2.16.1",
     "date-fns-tz": "^1.0.12",
@@ -85,6 +85,7 @@
     "react-redux": "^7.2.2",
     "react-use-gesture": "^8.0.1",
     "reselect": "^4.0.0",
+    "sass": "^1.35.1",
     "schedule-fns": "github:adrianschneider94/schedule-fns#fbcc4d94"
   }
 }
