--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "react-dom": "^16.8.0 || ^17.0.0"
   },
   "dependencies": {
+    "@react-spring/shared": "^9.4.4",
     "@react-spring/web": "^9.4.3",
+    "@types/react-dom": "^18.0.0",
     "@use-gesture/react": "^10.2.6",
     "body-scroll-lock": "*",
     "collections": "^5.1.13",
     "dayjs": "^1.10.7",
     "extra-bigint": "^0.0.62",
+    "lethargy": "^1.0.9",
     "react-merge-refs": "^1.1.0",
     "requestidlecallback-polyfill": "^1.0.2",
     "worker-rpc": "^0.1.1",
