--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "postinstall": "patch-package",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
     "build": "rollup -c",
-    "build-storybook": "build-storybook",
+    "build-storybook": "storybook build",
     "test": "npx jest",
     "depcheck": "depcheck"
   },
@@ -26,29 +26,31 @@
     "body-scroll-lock": "*",
     "collections": "^5.1.13",
     "dayjs": "^1.10.7",
-    "extra-bigint": "^0.0.62",
+    "extra-bigint": "^1.1.16",
     "lethargy": "^1.0.9",
-    "react-merge-refs": "^1.1.0",
+    "react-merge-refs": "^2.0.2",
     "requestidlecallback-polyfill": "^1.0.2",
-    "worker-rpc": "^0.1.1",
-    "zustand": "^3.6.9"
+    "worker-rpc": "^0.2.0",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.12",
+    "@babel/core": "^7.22.8",
+    "@babel/preset-env": "^7.22.7",
+    "@babel/preset-typescript": "^7.22.5",
     "@rollup/plugin-replace": "^4.0.0",
-    "@storybook/react": "^6.4.17",
+    "@storybook/react": "^7.0.26",
+    "@storybook/react-webpack5": "^7.0.26",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/collections": "^5.1.2",
-    "@types/jest": "^27.4.0",
-    "@types/react": "^17.0.38",
+    "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "depcheck": "^1.4.3",
     "eslint": "^8.9.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "^27.5.1",
-    "patch-package": "^6.4.7",
+    "jest": "^29.6.1",
+    "patch-package": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rollup": "^2.68.0",
@@ -59,7 +61,8 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
-    "ts-jest": "^27.1.3",
+    "storybook": "^7.0.26",
+    "ts-jest": "^29.1.1",
     "typescript": "^4.5.5"
   },
   "browserslist": {
